Добавить тесты, сделанные в POSTMAN
